--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
+    <!-- List of Recipes-->
     <ul>
-        <li><a href="lasagna.html"></a></li>
+        <li><a href="lasagna.html">Lasagna!</a></li>
+        <li><a href="tacos.html">Tacos!</a></li>
+        <li><a href="pizza.html">Pizza!</a></li>
     </ul>
 </body>
+
 </html>
