--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <head>
     <body>
-        <h1>Lasagna Recipe</h1>
+        <h1>Pizza Recipe</h1>
 
-        <p>Lasgagna recipe description here p1</p>
-        
         <h3>Ingredients</h3>
         <ul>
             <li></li>
