--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <head>
     <body>
-        <h1>Lasagna Recipe</h1>
-
-        <p>Lasgagna recipe description here p1</p>
+        <h1>Taco Recipe</h1>
+        <p>Taco recipe description here p1</p>
         
         <h3>Ingredients</h3>
         <ul>
