EDIT tacos.html, pizza.html, and lasagna.html and finished lists and added images

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,25 +2,23 @@
 <head>
     <body>
         <h1>Lasagna Recipe</h1>
-
+        <img src="images/lasagna.jpg">
         <p>Lasgagna recipe description here p1</p>
         
         <h3>Ingredients</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Noodles</li>
+            <li>Meat Sauce</li>
+            <li>Cheese</li>
         </ul>
 
         <h3>Steps</h3>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Boil lasagna noodles in salted water for 15 minutes</li>
+            <li>Make meat sauce</li>
+            <li>In oven safe dish, layer noodles with spoonfuls of sauce then cheese</li>
+            <li>Put in preheated 350F oven for 1 hour </li>
+            <li>Rest for 15 minutes before enjoying</li>
         </ol>
     </body>
 </head>
