--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -2,23 +2,23 @@
 <head>
     <body>
         <h1>Pizza Recipe</h1>
-
+        <img src="images/pizza.jpg">
         <h3>Ingredients</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Dough</li>
+            <li>Cheese</li>
+            <li>Pepperoni</li>
+            <li>Sauce</li>
+            <li>Toppings</li>
         </ul>
 
         <h3>Steps</h3>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Knead dough until you make a disk like shape</li>
+            <li>Put the Sauce on top of the disk</li>
+            <li>Put the cheese on top of the sauce, then put the pepperoni and the other toppings on the pizza.</li>
+            <li>Put the pizza in the ove at 350F for 40 minutes or until golden brown.</li>
+            <li>Remove Pizza from oven, slice across 4 times to make 8 large slices</li>
         </ol>
     </body>
 </head>
