--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -2,24 +2,24 @@
 <head>
     <body>
         <h1>Taco Recipe</h1>
+        <img src="images/tacos.jpg">
         <p>Taco recipe description here p1</p>
         
         <h3>Ingredients</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>1lb Ground Beef</li>
+            <li>Packet of Seasonings</li>
+            <li>Cheese</li>
+            <li>Sour Cream</li>
+            <li>Tortillas</li>
         </ul>
 
         <h3>Steps</h3>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><p>Put beef onto a pan until brown</p></li>
+            <li><p>Place hard shell tortillas in 350F oven for 10 minutes</p></li>
+            <li>After beef is done, put in another bowl to serve</li>
+            <li>With spoon, put beef into tortillas along with cheese and seasonings as desired</li>
         </ol>
     </body>
 </head>
