Fixed links in index

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h1>Odin Recipes</h1>
     <!-- List of Recipes-->
     <ul>
-        <li><a href="lasagna.html">Lasagna!</a></li>
-        <li><a href="tacos.html">Tacos!</a></li>
-        <li><a href="pizza.html">Pizza!</a></li>
+        <li><a href="/recipes/lasagna.html">Lasagna!</a></li>
+        <li><a href="/recipes/tacos.html">Tacos!</a></li>
+        <li><a href="/recipes/pizza.html">Pizza!</a></li>
     </ul>
 </body>
 
