--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -2,7 +2,7 @@
 <head>
     <body>
         <h1>Taco Recipe</h1>
-        <img src="images/tacos.jpg">
+        <img src="../images/tacos.jpeg">
         <p>Taco recipe description here p1</p>
         
         <h3>Ingredients</h3>
