--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -2,7 +2,7 @@
 <head>
     <body>
         <h1>Pizza Recipe</h1>
-        <img src="images/pizza.jpg">
+        <img src="../images/pizza.jpg">
         <h3>Ingredients</h3>
         <ul>
             <li>Dough</li>
