--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,7 +2,7 @@
 <head>
     <body>
         <h1>Lasagna Recipe</h1>
-        <img src="../images/lasagna.jpg">
+        <img src="../images/lasagna.jpg" alt="Yummy Lasagna">
         <p>Lasgagna recipe description here p1</p>
         
         <h3>Ingredients</h3>
